--- a/login.html
+++ b/login.html
@@ -38,15 +38,29 @@
 </head>
 
 <body class="text-center">
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 16/08/2020) -> Punto 3 y 4.</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+ <div class="container p-5">
+  <form class=" form signin">
+    <div class="alert alert-danger form-group" role="alert" style="position: relative; width:auto; top: 0;">
+      <img src="img\login.png" class="signin">
+      <h1 class="alert-heading">Iniciar sesión</h1>
+      <form id="formulario" method="POST" > 
+        <input id="email" type="email" name="usuario"  placeholder="Email" required autofocus >
+        <input id="password" type="password" name="contraseña"  placeholder="Contraseña" required autofocus >
+        <hr>
+        <div>
+          <p id="error"></p>
+          <label>
+           <input type="checkbox" value="remember-me">
+            Recordar mi usuario
+         </label>
+        </div>
+        <button type="submit" id="btn" class="btn btn-danger" onclick="acceder()">Acceder</button>
+      </form>
+      <p class="mb-0"></p>
     </div>
-  </div>
-
+  </form>
+ </div>
+  
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
 </body>
