--- a/products.html
+++ b/products.html
@@ -31,7 +31,19 @@
         <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
       </div>
     </div>
-    <footer class="text-muted bg-light">
+    <main role="main" class="pb-5">
+      <div class="text-center p-4">
+          <h2>Listado</h2>
+      </div>
+      <div class="container">
+          <div class="row">
+              <div class="list-group" id="cat-list-container">
+              </div>
+          </div>
+      </div>
+  </main>
+
+   <footer class="text-muted bg-light">
       <div class="container">
         <p class="float-right">
           <a href="#">Volver arriba</a>
@@ -39,8 +51,10 @@
         <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
         <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
       </div>
-    </footer>
-    <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
+    </footer> 
+
+    <div id="spinner-wrapper"><div class="lds-ring"></div></div></div>
+    
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
