--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <img src="img\login.png" class="signin">
       <h1 class="alert-heading">Iniciar sesión</h1>
       <form id="formulario" method="POST" > 
-        <input id="email" type="email" name="usuario"  placeholder="Email" required autofocus >
-        <input id="password" type="password" name="contraseña"  placeholder="Contraseña" required autofocus >
+        <input id="email" type="email" name="usuario"  placeholder="Email">
+        <input id="password" type="password" name="contraseña"  placeholder="Contraseña">
         <hr>
         <div>
           <p id="error"></p>
@@ -54,7 +54,7 @@
             Recordar mi usuario
          </label>
         </div>
-        <button type="submit" id="btn" class="btn btn-danger" onclick="acceder()">Acceder</button>
+        <button type="button" id="btn" class="btn btn-danger" onclick="acceder()">Acceder</button>
       </form>
       <p class="mb-0"></p>
     </div>
