--- a/cart.html
+++ b/cart.html
@@ -42,11 +42,12 @@
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="logeado" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="logeado" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
           Dropdown button
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a  class="dropdown-item" href="#"></a>
+          <a class="dropdown-item" href="#"></a>
           <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
           <a class="dropdown-item" href="#"> Mi Perfil</a>
           <a class="dropdown-item" href="index.html" onclick="renew()">Cerrar sesión</a>
@@ -54,98 +55,184 @@
       </div>
   </nav>
   <div class="container p-5">
-    <div  role="alert" style="position: relative; width:auto; top: 0;">
+    <div role="alert" style="position: relative; width:auto; top: 0;">
       <div>
-        <h1 class="text-center" >Mi carrito de compras</h1>
+        <h1 class="text-center">Mi carrito de compras</h1>
       </div>
-    <div id="spinner-wrapper"></div>
-    <div class="lds-ring">
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-8">
-        <h4>Articulos seleccionados</h4>
-        <div class="container">
-          <div class="row">
-              <div class="list-group" id="purchased">
+      <div id="spinner-wrapper"></div>
+      <div class="lds-ring">
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-8">
+            <h4>Articulos seleccionados</h4>
+            <div class="container">
+              <div class="row">
+                <div class="list-group" id="purchased">
+                </div>
               </div>
+            </div>
           </div>
-      </div>
-      </div>
-      <div class=" card col-4">
-        <br>
-        <h4 class="text-center">Opciones de compra</h4>
-        <br>
-        <div class="col-sm">
-          <label for="inputCantidad">Cantidad a comprar</label>
-          <input type="number" style= "width: 50px" id="inputCantidad" min="1">
-          <label for="inputTotalUnidad">Costo total por artículo</label>
-          <input type="" style="width: 60px" id="inputTotalUnidad" onchange="costoArticulo()" disabled> pesos
-          <label for="subtotal">Subtotal</label>
-          <input type="" style="width: 60px" id="subtotal"disabled> pesos
-          <label for="costoEnvio">Costo de envío</label>
-          <input type="" style="width: 60px" id="costoEnvio" disabled> pesos
-          <label for="total">Total a abonar</label>
-          <input type="" style="width: 60px" id="total" disabled> pesos
-          <br>
-          <br>
-          <h5>Forma de pago</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="select" id="pago1" value="" checked >
-            <label class="form-check-label" for="credito">
-              Tarjeta de crédito
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="select" id="pago2" value="" >
-            <label class="form-check-label" for="bancaria">
-              Transferencia bancaria
-            </label>
-          </div>
-          <div>
+          <div class=" card col-4">
             <br>
-            <h5>Método de envío</h5>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="envio" id="envio1" value="" checked>
-              <label class="form-check-label" for="envio1">
-                Premium (2-5 días)
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="envio" id="envio2" value="">
-              <label class="form-check-label" for="envio2">
-                Express (5-8 días)
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="envio" id="envio3" value="">
-              <label class="form-check-label" for="envio3">
-                Standard (12 a 15 días)
-              </label>
-            </div>
-          </div>
+            <h4 class="text-center">Opciones de compra</h4>
+            <br>
+            <div class="col-sm">
+           <label for="inputCantidad">Cantidad a comprar</label>
+          <input type="number" style="width: 50px" id="inputCantidad" onchange="cambiarCantidad(); calcularCosto(); subtotal()" min="2">
           <br>
-          <button class="btn btn-primary">Confirmar compra</button>
+          <label for="subtotal">Subtotal</label>
+          <p id="subtotal"></p>
+          <label for="costoEnvio">Costo de envío</label>
+          <input type="" style="width: 60px" id="costoEnvio" > pesos
+          <label for="total">Total a abonar</label>
+          <input type="" style="width: 60px" id="total" > pesos
           <br>
           <br>
+              <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Seleccionar forma de
+                pago</button>
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Seleccionar método de pago</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="accordion" id="accordionExample">
+                        <div class="card">
+                          <div class="card-header" id="headingOne">
+                            <h2 class="mb-0">
+                              <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Tarjeta de crédito
+                              </button>
+                            </h2>
+                          </div>
+                      
+                          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div class="card-body">
+                              <form>
+                                <div class="form-row">
+                                  <div class="form-group col-md-6">
+                                    <label for="nombreCompleto">Nombre completo</label>
+                                    <input type="text" class="form-control" id="nombreCompleto" placeholder="Ingrese su nombres y apellido ">
+                                  </div>
+                                  <div class="form-group col-md-6">
+                                    <label for="inputPassword4">DNI</label>
+                                    <input type="number" class="form-control" id="DNI" placeholder="Ingrese solo números">
+                                  </div>
+                                </div>
+                                <div class="form-group">
+                                  <label for="pin">Numero de tarjeta</label>
+                                  <input type="password" class="form-control" id="pin" placeholder="Ingrese su pin">
+                                </div>
+                                <button type="confirmar" class="btn btn-primary">Confirmar método</button>
+                              </form>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-header" id="headingTwo">
+                            <h2 class="mb-0">
+                              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Cuenta bancaria
+                              </button>
+                            </h2>
+                          </div>
+                          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                            <div class="card-body">
+                              <form>
+                                <div class="form-row">
+                                  <div class="form-group col-md-6">
+                                    <label for="nombreCompleto2">Nombre completo</label>
+                                    <input type="text" class="form-control" id="nombreCompleto2" placeholder="Ingrese nombre completo ">
+                                  </div>
+                                  <div class="form-group col-md-6">
+                                    <label for="DNI2">DNI</label>
+                                    <input type="number" class="form-control" id="DNI2" placeholder="Ingrese solo números">
+                                  </div>
+                                </div>
+                                <div class="form-group col-md-12">
+                                  <label for="nombreCompleto2">Nombre del banco</label>
+                                  <input type="text" class="form-control" id="nombreCompleto2" placeholder="Ingrese nombre del Banco">
+                                </div>
+                                <div class="form-group">
+                                  <label for="cuenta">Numero de cuenta</label>
+                                  <input type="text" class="form-control" id="cuenta" placeholder="Ingrese su número de cuenta bancaria">
+                                </div>
+                                <div class="form-group">
+                                  <label for="pinBanco">Clave de seguridad</label>
+                                  <input type="password" class="form-control" id="pinBanco" placeholder="Ingrese su clave de seguridad">
+                                </div>
+                                <button type="confirmar" class="btn btn-primary">Confirmar método</button>
+                              </form>
+                            </div>
+                          </div>
+                        </div>
+                      <div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary">Confirmar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <br>
+                </div>
+              </div>
+              <br>
+              <h5>Método de envío</h5>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="envio" id="envio1" value="" checked>
+                  <label class="form-check-label" for="envio1">
+                    Premium (2-5 días)
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="envio" id="envio2" value="">
+                  <label class="form-check-label" for="envio2">
+                    Express (5-8 días)
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="envio" id="envio3" value="">
+                  <label class="form-check-label" for="envio3">
+                    Standard (12 a 15 días)
+                  </label>
+              <br>
+              <br>
+              <button class="btn btn-primary">Confirmar compra</button>
+              <br>
+              <br>
+            </div>
+        </div> 
+            </div>
         </div> 
       </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="card-body">
-      <div>
+        </div> 
+            </div>
+          </div>
+        </div>
+        <div id="demo"></div>
       </div>
-    </div>
-  </div>
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/dropzone.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/cart.js"></script>
+      <div class="container">
+        <div class="card-body">
+          <div>
+          </div>
+        </div>
+      </div>
+      <script src="js/jquery-3.4.1.min.js"></script>
+      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="js/dropzone.js"></script>
+      <script src="js/init.js"></script>
+      <script src="js/cart.js"></script>
 </body>
+
 </html>
 <!-- Para hacer el carrito me informé a partir de la página de Bootstrap 4
   y utilicé como referencia el ejemplo de store.nike.com que aparece 
   en https://www.templatemonster.com/blog/es/40-ejemplos-de-mejores-disenos-de-pagina-de-carrito-de-compras/-->
-  
