--- a/cart.html
+++ b/cart.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
 <html lang="en">
-
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -49,7 +48,7 @@
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item" href="#"></a>
           <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
-          <a class="dropdown-item" href="#"> Mi Perfil</a>
+          <a class="dropdown-item" href="my-profile.html"> Mi Perfil</a>
           <a class="dropdown-item" href="index.html" onclick="renew()">Cerrar sesión</a>
         </div>
       </div>
@@ -88,6 +87,7 @@
           <label for="total">Total a abonar</label>
           <input type="" style="width: 60px" id="total" > pesos
           <br>
+          <!--Me basé en la información que aparece en la página de Bootstrap 4 para generar el modal con los desplegables.-->
           <br>
               <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Seleccionar forma de
                 pago</button>
@@ -231,7 +231,6 @@
       <script src="js/init.js"></script>
       <script src="js/cart.js"></script>
 </body>
-
 </html>
 <!-- Para hacer el carrito me informé a partir de la página de Bootstrap 4
   y utilicé como referencia el ejemplo de store.nike.com que aparece 
