--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a  class="dropdown-item" href="#"></a>
             <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
-            <a class="dropdown-item" href="#"> Mi Perfil</a>
+            <a class="dropdown-item" href="my-profile.html"> Mi Perfil</a>
             <a class="dropdown-item" href="index.html" onclick="renew()">Cerrar sesión</a>
           </div>
         </div>
@@ -77,14 +77,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="list-group" id="prod-list-container">
+            <div class="card-deck" id="prod-list-container">
             </div>
         </div>
     </div>
 </main>
       <div class="container">
           <div class="row">
-              <div class="list-group" id="prod-list-container">
+              <div class="card-deck" id="prod-list-container">
               </div>
           </div>
       </div>
