--- a/categories.html
+++ b/categories.html
@@ -29,7 +29,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a  class="dropdown-item" href="#"></a>
             <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
-            <a class="dropdown-item" href="#"> Mi Perfil</a>
+            <a class="dropdown-item" href="my-profile.html"> Mi Perfil</a>
             <a class="dropdown-item" href="index.html" onclick="renew()">Cerrar sesión</a>
           </div>
         </div>
