--- a/sell.html
+++ b/sell.html
@@ -37,7 +37,17 @@
             <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
             <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-            <a id="logeado" class="py-2 d-none d-md-inline-block" ></a>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="logeado" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Dropdown button
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#"></a>
+                <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
+                <a class="dropdown-item" href="my-profile.html"> Mi Perfil</a>
+                <a class="dropdown-item" href="index.html" onclick="renew()">Cerrar sesión</a>
+              </div>
         </div>
     </nav>
       <div class="container">
